--- a/style.css
+++ b/style.css
@@ -249,7 +249,7 @@ h4{color:#333333!important;}
 .bg-dots-bg{background-image:url("img/dots-bg.png");}
 .bg-lines-h2-bg{background-image:url("img/lines-h2-bg.png");}
 .bg-banniere{background-image:url("img/la-chouette-agence-banniere.jpg");}
-.bg-presentation{background-image:url("img/image-de-presentation.bmp");}
+.bg-presentation{background-image:url("img/image-de-presentation.jpg");}
 @media (max-width:1024px){.bloc{padding-left:20px;padding-right:20px;}
                           .bloc.full-width-bloc,
                           .bloc-tile-2.full-width-bloc .container,
