--- a/style.css
+++ b/style.css
@@ -145,6 +145,8 @@ a:hover{text-decoration:none;cursor:pointer;}
 .nav-invert .navbar .nav{float:left;}
 .nav-invert .navbar-header,
 .nav-invert .navbar-brand{float:right;position:relative;z-index:2;}
+.tc-white > p {color:white;}
+.tc-white > h2 {color:white;}
 @media (min-width:768px){.site-navigation{margin-top: -30px;float: right;}
                          .nav > li .dropdown-menu a,
                          .nav > li .dropdown-menu a:hover{color:#484848;}
@@ -212,8 +214,9 @@ p,
 label,
 .btn,
 a{font-family:"helvetica";font-weight:400;color:#575757!important;}
-.col-sm-12 > h1 {color:black!important;}
-#name, #email, #input_504, #message {background-color: #dcdcdc;}
+.col-sm-12 > h1 {color:white!important;}
+.col-sm-12 > p {color:white!important;}
+#name, #email, #input_504, #message {background-color: #eeeeee;}
 .container{max-width:1000px;}
 .hero-bloc-text{font-size:38px;}
 .hero-bloc-text-sub{font-size:36px;}
@@ -238,7 +241,7 @@ h4{color:#333333!important;}
 .bgc-white{background-color:#FFFFFF;}
 .bgc-dark-slate-blue{background-color:#364577;}
 .bgc-atomic-tangerine{background-color:#F3976C;}
-.tc-white{color:black!important;}
+.tc-white{color:white!important;}
 .btn-atomic-tangerine{background:#F3976C;color:#FFFFFF!important;}
 .btn-atomic-tangerine:hover{background:#c27956!important;color:#FFFFFF!important;}
 .ltc-white{color:#FFFFFF!important;}
@@ -259,19 +262,18 @@ h4{color:#333333!important;}
 @media (max-width:992px) and (min-width:768px){.navbar .nav{max-width:80%}
                                                .nav-center.navbar .nav{max-width:100%}
 }
-@media only screen and (min-device-width:768px) and (max-device-width:1024px) and (orientation:landscape){.b-parallax{background-attachment:scroll;}
+@media (min-width:768px) and (max-width:1024px) and (orientation:landscape){.b-parallax{background-attachment:scroll;}
 }
-@media only screen and (min-device-width:1024px) and (max-device-width:1366px) and (-webkit-min-device-pixel-ratio:1.5){.b-parallax{background-attachment:scroll;}
+@media (min-width:1024px) and (max-width:1366px) and (-webkit-min-device-pixel-ratio:1.5){.b-parallax{background-attachment:scroll;}
 }
 @media (max-width:991px){.container{width:100%;}
                          .b-parallax{background-attachment:scroll;}
                          .page-container,
                          #hero-bloc{overflow-x:hidden;position:relative;}
-                         .bloc{padding-left:constant(safe-area-inset-left);padding-right:constant(safe-area-inset-right);}
                          .bloc-group,
                          .bloc-group .bloc{display:block;width:100%;}
                          .bloc-fill-screen .fill-bloc-top-edge,
-                         .bloc-fill-screen .fill-bloc-bottom-edge{padding:0 20px;padding-left:constant(safe-area-inset-left);padding-right:constant(safe-area-inset-right);}
+                         .bloc-fill-screen .fill-bloc-bottom-edge{padding:0 20px;}
 }
 @media (max-width:767px){.page-container{overflow-x:hidden;position:relative;}
                          h1,
@@ -317,7 +319,11 @@ h4{color:#333333!important;}
                          .close-lightbox{display:inline-block;}
                          .blocsapp-device-iphone5{background-size:216px 425px;padding-top:60px;width:216px;height:425px;}
                          .blocsapp-device-iphone5 img{width:180px;height:320px;}
-}
+                         .text-center{margin: 0px 10px 0px;}
+                         .portfolio-thumb{display:flex;flex-direction: column;margin: auto;}
+                         .social{display:flex;align-items: center;}
+                         .row-no-gutters{justify-content: center;}
+                         }
 @media (max-width:400px){.bloc{padding-left:0;padding-right:0;}
 }
 @media (max-width:767px){.bloc-mob-center-text{text-align:center;}
