--- a/style.css
+++ b/style.css
@@ -7,7 +7,6 @@ body {
     -moz-osx-font-smoothing:grayscale;}
 a, button{transition:all .3s ease-in-out;outline:none!important;}
 a:hover{text-decoration:none;cursor:pointer;}
-#page-loading-blocs-notifaction{position:fixed;top:0;bottom:0;width:100%;z-index:100000;background:#FFFFFF url("img/pageload-spinner.gif") no-repeat center center;}
 .bloc{width:100%;clear:both;background:50% 50% no-repeat;padding:0 50px;-webkit-background-size:cover;-moz-background-size:cover;-o-background-size:cover;background-size:cover;position:relative;}
 .bloc .container{padding-left:0;padding-right:0;}
 .bloc-lg{padding:100px 50px;}
@@ -28,6 +27,7 @@ a:hover{text-decoration:none;cursor:pointer;}
 .bloc-bg-texture::before{content:"";background-size:2px 2px;position:absolute;top:0;bottom:0;left:0;right:0;}
 .texture-paper::before{background:url("img/texture-paper.png");background-size:280px 280px;}
 .b-parallax{background-attachment:fixed;}
+#bloc-8{color:black;}
 .d-bloc{color:rgba(255, 255, 255, .7);}
 .d-bloc button:hover{color:rgba(255, 255, 255, .9);}
 .d-bloc .icon-round,
@@ -54,7 +54,6 @@ a:hover{text-decoration:none;cursor:pointer;}
 .d-bloc .navbar a:hover,
 .d-bloc .navbar-brand:hover,
 .d-bloc a:hover .icon-sm,
-.d-bloc a:hover .icon-md,
 .d-bloc a:hover .icon-lg,
 .d-bloc a:hover .icon-xl,
 .d-bloc h1 a:hover,
@@ -64,6 +63,7 @@ a:hover{text-decoration:none;cursor:pointer;}
 .d-bloc h5 a:hover,
 .d-bloc h6 a:hover,
 .d-bloc p a:hover{color:rgba(255, 255, 255, 1);}
+.d-bloc a:hover .icon-md{color:black;}
 .d-bloc .navbar-toggle .icon-bar{background:rgba(255, 255, 255, 1);}
 .d-bloc .btn-wire,
 .d-bloc .btn-wire:hover{color:rgba(255, 255, 255, 1);border-color:rgba(255, 255, 255, 1);}
@@ -129,12 +129,12 @@ a:hover{text-decoration:none;cursor:pointer;}
 .row.row-no-gutters > [class*=" col-"]{padding-right:0;padding-left:0;}
 #bloc-1-hero h1{font-size:32px;}
 #bloc-1-hero {height:422px;}
-.navbar{margin-bottom:0;z-index:1;}
+.navbar{margin-bottom:0;}
 .navbar-brand{height:auto;padding:3px 15px;font-size:25px;font-weight:normal;font-weight:600;line-height:44px;}
 .navbar-brand img{max-height:200px;margin:0 5px 0 0;display:inline;}
 .navbar-brand img[src$=svg]{min-width:100px;}
 .nav-center .navbar-brand img{margin:0;}
-.navbar .nav{padding-top:2px;margin-right:-16px;float:right;z-index:1;}
+.navbar .nav{padding-top:2px;margin-right:-16px;float:right;}
 .nav > li{float:left;margin-top:4px;font-size:16px;}
 .navbar-nav .open .dropdown-menu > li > a{text-align:inherit;}
 .nav > li a:hover,
@@ -144,9 +144,10 @@ a:hover{text-decoration:none;cursor:pointer;}
 .navbar-toggle .icon-bar{background-color:rgba(0, 0, 0, .5);width:26px;}
 .nav-invert .navbar .nav{float:left;}
 .nav-invert .navbar-header,
-.nav-invert .navbar-brand{float:right;position:relative;z-index:2;}
+.nav-invert .navbar-brand{float:right;position:relative;}
 .tc-white > p {color:white;}
 .tc-white > h2 {color:white;}
+.text-center > .social > span {color:black;}
 @media (min-width:768px){.site-navigation{margin-top: -30px;float: right;}
                          .nav > li .dropdown-menu a,
                          .nav > li .dropdown-menu a:hover{color:#484848;}
@@ -184,22 +185,22 @@ button{outline:none!important;}
 .panel-rd .panel-heading{border-radius:29px 29px 0 0;}
 .panel-rd .panel-footer{border-radius:0 0 29px 29px;}
 .form-control{border-color:rgba(0, 0, 0, .1);box-shadow:none;}
-.scrollToTop{width:40px;height:40px;position:fixed;bottom:20px;right:20px;opacity:0;z-index:500;transition:all .3s ease-in-out;}
+.scrollToTop{width:40px;height:40px;position:absolute;bottom:20px;right:20px;transition:all .3s ease-in-out;}
 .scrollToTop span{margin-top:6px;}
 .showScrollTop{font-size:14px;opacity:1;}
 a[data-lightbox]{position:relative;display:block;text-align:center;}
-a[data-lightbox]:hover::before{content:"+";font-family:"HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial;font-size:32px;width:50px;height:50px;margin-left:-25px;border-radius:50%;background:rgba(0, 0, 0, .6);color:#FFF;font-weight:100;z-index:1;position:absolute;top:50%;transform:translateY(-50%);-webkit-transform:translateY(-50%);}
+a[data-lightbox]:hover::before{content:"+";font-family:"HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial;font-size:32px;width:50px;height:50px;margin-left:-25px;border-radius:50%;background:rgba(0, 0, 0, .6);color:#FFF;font-weight:100;position:absolute;top:50%;transform:translateY(-50%);-webkit-transform:translateY(-50%);}
 a[data-lightbox]:hover img{opacity:0.6;-webkit-animation-fill-mode:none;animation-fill-mode:none;}
 #lightbox-modal{display:flex;align-items:center;}
 #lightbox-modal .modal-dialog{width:90%;max-width:900px;margin:0 auto 0;}
 #lightbox-modal .modal-dialog img{max-height:90vh;margin:0 auto;}
 .lightbox-caption{padding:20px;color:#FFF;background:rgba(0, 0, 0, .5);position:absolute;left:15px;right:15px;bottom:5px;}
-.close-lightbox{color:#FFF;font-size:30px;position:absolute;top:20px;right:20px;z-index:20;background:rgba(0, 0, 0, .5);border:none;line-height:30px;padding:0 9px 5px;opacity:0.3;}
+.close-lightbox{color:#FFF;font-size:30px;top:20px;right:20px;background:rgba(0, 0, 0, .5);border:none;line-height:30px;padding:0 9px 5px;opacity:0.3;}
 .close-lightbox:hover,
 .next-lightbox:hover,
 .prev-lightbox:hover{opacity:1.0;color:#FFF;}
 .next-lightbox,
-.prev-lightbox{font-size:20px;color:rgba(255, 255, 255, .9);background:rgba(0, 0, 0, .5);transition:all .2s ease-in-out;position:absolute;top:45%;z-index:1;opacity:0.4;}
+.prev-lightbox{font-size:20px;color:rgba(255, 255, 255, .9);background:rgba(0, 0, 0, .5);transition:all .2s ease-in-out;position:absolute;top:45%;opacity:0.4;}
 .next-lightbox{padding:6px 8px 1px 13px;right:25px;}
 .prev-lightbox{padding:6px 13px 1px 10px;left:25px;}
 .snapshot-lb .modal-body{padding-bottom:45px;}
@@ -212,10 +213,11 @@ h5,
 h6,
 p,
 label,
-.btn,
-a{font-family:"helvetica";font-weight:400;color:#575757!important;}
+.btn,{font-family:"helvetica";font-weight:400;color:#575757!important;}
+a{color:black;}
 .col-sm-12 > h1 {color:white!important;}
 .col-sm-12 > p {color:white!important;}
+.col-sm-13 > p {color:black!important;}
 #name, #email, #input_504, #message {background-color: #eeeeee;}
 .container{max-width:1000px;}
 .hero-bloc-text{font-size:38px;}
@@ -242,8 +244,8 @@ h4{color:#333333!important;}
 .bgc-dark-slate-blue{background-color:#364577;}
 .bgc-atomic-tangerine{background-color:#F3976C;}
 .tc-white{color:white!important;}
-.btn-atomic-tangerine{background:#F3976C;color:#FFFFFF!important;}
-.btn-atomic-tangerine:hover{background:#c27956!important;color:#FFFFFF!important;}
+.btn-atomic-tangerine{background:#F3976C;color:black!important;}
+.btn-atomic-tangerine:hover{background:#c27956!important;color:black!important;}
 .ltc-white{color:#FFFFFF!important;}
 .ltc-white:hover{color:#cccccc!important;}
 .ltc-atomic-tangerine{color:#F3976C!important;}
